rename proto service
