# go-commons/gen/proto/route/route.pb.gw.go
@@ -35,7 +35,7 @@ var (
 	_ = metadata.Join
 )
 
-func request_ProducerService_RouteChat_0(ctx context.Context, marshaler runtime.Marshaler, client ProducerServiceClient, req *http.Request, pathParams map[string]string) (ProducerService_RouteChatClient, runtime.ServerMetadata, error) {
+func request_Route_RouteChat_0(ctx context.Context, marshaler runtime.Marshaler, client RouteClient, req *http.Request, pathParams map[string]string) (Route_RouteChatClient, runtime.ServerMetadata, error) {
 	var metadata runtime.ServerMetadata
 	stream, err := client.RouteChat(ctx)
 	if err != nil {
@@ -78,13 +78,13 @@ func request_ProducerService_RouteChat_0(ctx context.Context, marshaler runtime.
 	return stream, metadata, nil
 }
 
-// RegisterProducerServiceHandlerServer registers the http handlers for service ProducerService to "mux".
-// UnaryRPC     :call ProducerServiceServer directly.
+// RegisterRouteHandlerServer registers the http handlers for service Route to "mux".
+// UnaryRPC     :call RouteServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
-// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterProducerServiceHandlerFromEndpoint instead.
+// Note that using this registration option will cause many gRPC library features to stop working. Consider using RegisterRouteHandlerFromEndpoint instead.
 // GRPC interceptors will not work for this type of registration. To use interceptors, you must use the "runtime.WithMiddlewares" option in the "runtime.NewServeMux" call.
-func RegisterProducerServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux, server ProducerServiceServer) error {
-	mux.Handle(http.MethodPost, pattern_ProducerService_RouteChat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+func RegisterRouteHandlerServer(ctx context.Context, mux *runtime.ServeMux, server RouteServer) error {
+	mux.Handle(http.MethodPost, pattern_Route_RouteChat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
 		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
@@ -94,9 +94,9 @@ func RegisterProducerServiceHandlerServer(ctx context.Context, mux *runtime.Serv
 	return nil
 }
 
-// RegisterProducerServiceHandlerFromEndpoint is same as RegisterProducerServiceHandler but
+// RegisterRouteHandlerFromEndpoint is same as RegisterRouteHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterProducerServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+func RegisterRouteHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
 	conn, err := grpc.NewClient(endpoint, opts...)
 	if err != nil {
 		return err
@@ -115,45 +115,45 @@ func RegisterProducerServiceHandlerFromEndpoint(ctx context.Context, mux *runtim
 			}
 		}()
 	}()
-	return RegisterProducerServiceHandler(ctx, mux, conn)
+	return RegisterRouteHandler(ctx, mux, conn)
 }
 
-// RegisterProducerServiceHandler registers the http handlers for service ProducerService to "mux".
+// RegisterRouteHandler registers the http handlers for service Route to "mux".
 // The handlers forward requests to the grpc endpoint over "conn".
-func RegisterProducerServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	return RegisterProducerServiceHandlerClient(ctx, mux, NewProducerServiceClient(conn))
+func RegisterRouteHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	return RegisterRouteHandlerClient(ctx, mux, NewRouteClient(conn))
 }
 
-// RegisterProducerServiceHandlerClient registers the http handlers for service ProducerService
-// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "ProducerServiceClient".
-// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "ProducerServiceClient"
+// RegisterRouteHandlerClient registers the http handlers for service Route
+// to "mux". The handlers forward requests to the grpc endpoint over the given implementation of "RouteClient".
+// Note: the gRPC framework executes interceptors within the gRPC handler. If the passed in "RouteClient"
 // doesn't go through the normal gRPC flow (creating a gRPC client etc.) then it will be up to the passed in
-// "ProducerServiceClient" to call the correct interceptors. This client ignores the HTTP middlewares.
-func RegisterProducerServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux, client ProducerServiceClient) error {
-	mux.Handle(http.MethodPost, pattern_ProducerService_RouteChat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+// "RouteClient" to call the correct interceptors. This client ignores the HTTP middlewares.
+func RegisterRouteHandlerClient(ctx context.Context, mux *runtime.ServeMux, client RouteClient) error {
+	mux.Handle(http.MethodPost, pattern_Route_RouteChat_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/location.ProducerService/RouteChat", runtime.WithHTTPPathPattern("/v1/location/send"))
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/location.Route/RouteChat", runtime.WithHTTPPathPattern("/v1/location/send"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_ProducerService_RouteChat_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_Route_RouteChat_0(annotatedContext, inboundMarshaler, client, req, pathParams)
 		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
 		if err != nil {
 			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		forward_ProducerService_RouteChat_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+		forward_Route_RouteChat_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
 	})
 	return nil
 }
 
 var (
-	pattern_ProducerService_RouteChat_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "location", "send"}, ""))
+	pattern_Route_RouteChat_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "location", "send"}, ""))
 )
 
 var (
-	forward_ProducerService_RouteChat_0 = runtime.ForwardResponseStream
+	forward_Route_RouteChat_0 = runtime.ForwardResponseStream
 )
